<resources>
    <string name="user_icon_desc">User icon</string>
    <string name="app_name">Youtube</string>
    <string name="title_activity_toolbar">toolbar</string>
    <string name="homepage_button_desc">Home Page</string>
    <string name="register_button_desc">Register</string>
    <string name="add_content_button_desc">Add Content</string>
    <string name="search_button_desc">Search</string>
    <string name="notification_button_desc">Notifications</string>
    <string name="dark_mode_button_desc">Dark Mode</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="icon_button_desc">Button Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>