<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/search_button_desc"/>

        <ImageButton
            android:id="@+id/notificationButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/ic_notifications"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/notification_button_desc"/>

        <ImageButton
            android:id="@+id/darkmodeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/ic_dark_mode"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/dark_mode_button_desc" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:contentDescription="@string/app_logo_desc"
            android:src="@drawable/app_logo" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="81"/>

    <!-- Bottom Horizontal LinearLayout -->
    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:orientation="horizontal">

        <!-- Spacer -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_user_register"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/register_button_desc"/>
        <ImageButton
            android:id="@+id/signoutButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_sign_out"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="sign out"/>

        <!-- Spacer -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageButton
            android:id="@+id/addContentButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_content_button_desc"/>

        <!-- Spacer -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageButton
            android:id="@+id/homepageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_homelogo"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/homepage_button_desc"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <!-- Spacer -->

        <Button
            android:id="@+id/profileButton"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:backgroundTint="#ADD8E6"
            android:gravity="center"
            android:radius="20dp"
            android:layout_marginTop="5dp"
            android:text="T"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

    </LinearLayout>

</LinearLayout>
